feat: Check several key personnel data

--- a/Machine-Learning/Mini-Project.ipynb
+++ b/Machine-Learning/Mini-Project.ipynb
@@ -1224,7 +1224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1244,102 +1244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "SKILLING JEFFREY K\n"
-     ]
-    }
-   ],
-   "source": [
-    "name = update_name('Jeffrey K Skilling')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 119,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'PRENTICE JAMES'"
-      ]
-     },
-     "execution_count": 119,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "name = update_name('James Prentice')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 120,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'bonus': 'NaN',\n",
-       " 'deferral_payments': 564348,\n",
-       " 'deferred_income': 'NaN',\n",
-       " 'director_fees': 'NaN',\n",
-       " 'email_address': 'james.prentice@enron.com',\n",
-       " 'exercised_stock_options': 886231,\n",
-       " 'expenses': 'NaN',\n",
-       " 'from_messages': 'NaN',\n",
-       " 'from_poi_to_this_person': 'NaN',\n",
-       " 'from_this_person_to_poi': 'NaN',\n",
-       " 'loan_advances': 'NaN',\n",
-       " 'long_term_incentive': 'NaN',\n",
-       " 'other': 'NaN',\n",
-       " 'poi': False,\n",
-       " 'restricted_stock': 208809,\n",
-       " 'restricted_stock_deferred': 'NaN',\n",
-       " 'salary': 'NaN',\n",
-       " 'shared_receipt_with_poi': 'NaN',\n",
-       " 'to_messages': 'NaN',\n",
-       " 'total_payments': 564348,\n",
-       " 'total_stock_value': 1095040}"
-      ]
-     },
-     "execution_count": 120,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "enron_data[name]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [
     {
@@ -1368,7 +1273,7 @@
        " 'total_stock_value': 698242}"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 140,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1380,30 +1285,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 143,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'bonus': 5600000,\n",
+       " 'deferral_payments': 'NaN',\n",
+       " 'deferred_income': 'NaN',\n",
+       " 'director_fees': 'NaN',\n",
+       " 'email_address': 'jeff.skilling@enron.com',\n",
+       " 'exercised_stock_options': 19250000,\n",
+       " 'expenses': 29336,\n",
+       " 'from_messages': 108,\n",
+       " 'from_poi_to_this_person': 88,\n",
+       " 'from_this_person_to_poi': 30,\n",
+       " 'loan_advances': 'NaN',\n",
+       " 'long_term_incentive': 1920000,\n",
+       " 'other': 22122,\n",
+       " 'poi': True,\n",
+       " 'restricted_stock': 6843672,\n",
+       " 'restricted_stock_deferred': 'NaN',\n",
+       " 'salary': 1111258,\n",
+       " 'shared_receipt_with_poi': 2042,\n",
+       " 'to_messages': 3627,\n",
+       " 'total_payments': 8682716,\n",
+       " 'total_stock_value': 26093672}"
+      ]
+     },
+     "execution_count": 143,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "name = update_name('Jeffrey K Skilling')\n",
+    "enron_data[name]"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 146,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'bonus': 7000000,\n",
+       " 'deferral_payments': 202911,\n",
+       " 'deferred_income': -300000,\n",
+       " 'director_fees': 'NaN',\n",
+       " 'email_address': 'kenneth.lay@enron.com',\n",
+       " 'exercised_stock_options': 34348384,\n",
+       " 'expenses': 99832,\n",
+       " 'from_messages': 36,\n",
+       " 'from_poi_to_this_person': 123,\n",
+       " 'from_this_person_to_poi': 16,\n",
+       " 'loan_advances': 81525000,\n",
+       " 'long_term_incentive': 3600000,\n",
+       " 'other': 10359729,\n",
+       " 'poi': True,\n",
+       " 'restricted_stock': 14761694,\n",
+       " 'restricted_stock_deferred': 'NaN',\n",
+       " 'salary': 1072321,\n",
+       " 'shared_receipt_with_poi': 2411,\n",
+       " 'to_messages': 4273,\n",
+       " 'total_payments': 103559793,\n",
+       " 'total_stock_value': 49110078}"
+      ]
+     },
+     "execution_count": 146,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "name = update_name('Kenneth L Lay')\n",
+    "enron_data[name]"
+   ]
   },
   {
    "cell_type": "code",
