feat: Explore the dataset

--- a/Machine-Learning/Mini-Project.ipynb
+++ b/Machine-Learning/Mini-Project.ipynb
@@ -1367,6 +1367,90 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 149,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "95\n"
+     ]
+    }
+   ],
+   "source": [
+    "count = 0\n",
+    "for key in enron_data:\n",
+    "    if enron_data[key]['salary'] != 'NaN':\n",
+    "        count += 1\n",
+    "print count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "111\n"
+     ]
+    }
+   ],
+   "source": [
+    "count = 0\n",
+    "for key in enron_data:\n",
+    "    if enron_data[key]['email_address'] != 'NaN':\n",
+    "        count += 1\n",
+    "print count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "125\n"
+     ]
+    }
+   ],
+   "source": [
+    "count = 0\n",
+    "for key in enron_data:\n",
+    "    if enron_data[key]['total_payments'] != 'NaN':\n",
+    "        count += 1\n",
+    "print count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 155,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "count = 0\n",
+    "for key in enron_data:\n",
+    "    if (enron_data[key]['poi']) and (enron_data[key]['total_payments'] == 'NaN'):\n",
+    "        count += 1\n",
+    "print count"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
