--- a/Machine-Learning/Mini-Project.ipynb
+++ b/Machine-Learning/Mini-Project.ipynb
@@ -1835,6 +1835,141 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Outliers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "slope:  [[ 5.07793064]]\n",
+      "intercept: [ 25.21002155]\n"
+     ]
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAXoAAAD8CAYAAAB5Pm/hAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAHxlJREFUeJzt3X+QHPV55/H3o2WBFY4tcciytAjEnUGUZBmE18CxrpTB\nsYUjYwQ+Y6hwJV+5wj84BXZOkZSSC2zsYonqqKQqVKooEhcOQSDACBklKIDIXc6AdKsflLyADDYI\naUE/bCE5sgVedp/7Y3q0s7PdPTM9PTM9PZ9XFbUz3dMzvW352e8836efr7k7IiKSX1NafQIiItJY\nCvQiIjmnQC8iknMK9CIiOadALyKScwr0IiI5p0AvIpJzCvQiIjmnQC8iknMntfoEAM444wyfO3du\nq09DRKStbNu27VfuPqPS6zIR6OfOncvg4GCrT0NEpK2Y2Z5qXqfUjYhIzinQi4jknAK9iEjOKdCL\niOScAr2ISM4p0IuI5JwCvYhIzmWijl5EpN2s3zHMmk27efvIcWZP62H54nksXdSb+jFpUKAXEanR\n+h3DrPrxLo6PjAIwfOQ4q368CyAycCc5Ji1K3YiI1GjNpt0nAnbR8ZFR1mzaneoxaVGgFxGp0dtH\njte0PekxaVGgFxGp0expPTVtT3pMWhToRaSjrd8xTP/AZs5ZuZH+gc2s3zFc8Zjli+fR0901YVtP\ndxfLF89L9Zi0aDJWRDpW0gnS4r5aKmiSHJMWc/eGf0glfX19rjbFItJs/QObGQ7JkfdO6+GnK69o\nwRnVxsy2uXtfpdcpdSMiHauVE6TNpNSNiHSs2dN6Qkf01UyQturmpyQ0oheRjpV0grSY2x8+chxn\nPLdfzURuK1Qd6M2sy8x2mNmTwfPTzexpM3st+Dm95LWrzOx1M9ttZosbceIiIvVauqiXO69dSO+0\nHoxCbv7OaxdWHJm38uanJGpJ3dwCvAJ8OHi+EnjW3QfMbGXwfIWZzQeuBxYAs4FnzOw8dx8Ne1MR\nkVZauqi35pRLu+X2qxrRm9mZwBLgvpLNVwP3B4/vB5aWbH/I3d939zeA14GL0zldEZHWS3rzU5Ka\n/TRUm7r5a+AvgLGSbTPd/Z3g8X5gZvC4F9hb8rp9wTYRkVxIkttvZV6/YqA3sy8BB919W9RrvFCM\nX1NBvpndZGaDZjZ46NChWg4VEWmpJLn9Vub1q8nR9wNfNrM/Bk4FPmxmDwAHzGyWu79jZrOAg8Hr\nh4E5JcefGWybwN3vBe6Fwg1TdfwOIiJNV2tuP9NNzdx9lbuf6e5zKUyybnb3G4ENwLLgZcuAJ4LH\nG4DrzewUMzsHOBfYmvqZi4g0WJKcetQxrWxqVs8NUwPAOjP7BrAHuA7A3YfMbB3wMvABcLMqbkSk\nVq2+ISntxUWWL543YR80r6mZet2ISOaUB0woBMVqatzTkqQPTqVj0v7jVW2vG7VAEJHMiZu4bFag\nb8TiIklq9tOgFggikjlZuCGp3RYXiaNALyKZUylgNuPGo6SLi3RPsQnbuqdYU/LwcRToRSRz4oJs\ns248StoHB6vwvAWUoxeRzIlbjal/YHOi/H2SidBac+prNu1mZHRigcvIqDd1biGMAr2INFyaQTZJ\n/j6u7BHSW94vC3MLYRToRaShkq7LGiXJYiFRVTy3bxji/Q/GWnpuzaAcvYhULckkaNo9XpYvnkd3\nV9mEZ1f8hGfUiPrI8ZHUzy3JQiaNphG9iFQl6ci8IemM8vs8K9z3GTXSjpL03OLmFlpJgV5EqpL0\nJqa00xlrNu1mZKxswnMsfsIzqv3Aqd1TePd3I6mdG7Tupqg4St2ISFWSjszTTmckOY+oUsnbrlqQ\nyVRL2jSiF5GqJB2Zp53OqOc8oj4za6mWtCnQi0hV6um+mGY6I+0ukFlMtaRNgV5EqpKVicasnEc7\nUZtiEZE2pTbFIpJbrV6UJIl//mdYsmT8eTPH2Ar0ItJW0r7TtpF+/Ws444xWn4XKK0WkzaR9p20j\nmBX+Cwvyv/99c0fzoBG9iGRUVHomq43DLKYd8dAQzJ/fvHMpp0AvIpkTl56Jq6Nvdu7+ttvge98L\n3zdzJuzf37CProkCvYhM0urJzrj0TFQd/eXnz2hK7v611+C886L3Z6CQcRLl6EVkgmat4BQnLj0T\n1c7guVcPNTR3X8y7hwX5o0cLAT6LQR40oheRMkmbl6Vp2tTu0GZj06Z2A+F3s37r4Z2h71VP7j4u\n7/6d70SnbbJGgV5EJsjCZGfUyDhuxJxWl8yvfQ3Wrav93LJMqRsRmSAqMDZzlaSjxyeP5uO2Q31d\nMn/+8/HUTFiQL6Zl2jHIgwK9iJTJwipJSf7YROXu49JNxeA+L+RX27OnvYN7KaVuRHIgzSqZLDQN\nS9qhsppOlHF59+uvh7VrazrVtqBAL9LmGtESICpgrl6/i7Vb9jLqTpcZN1wyh+8vXZj85GM+H9L7\nY7NkSaHXTJQ8jNrjKNCLtLlmVcmsXr+LB15868TzUfcTzxsV7Os5/7ffht6Yw/Me3Esp0Iu0uUZU\nyYSlgtZu2Rv62rVb9jYk0CcVl5rZtg0uuqh555IVCvQibSIqD5/24ttRqaDRiCFw1PZmigvuM2bA\nwYPNO5csUtWNSAus3zFM/8Bmzlm5kf6BzRXvOo27WzXtKpmoVFCUrrgo20DLlo1XzYQpVsx0epAH\nBXqRpkvSYqBSHv4rn+o9EXC7zPjKp5Lnt2tN+dxwyZxEn5PEgQPjwf1HP5q8v93r3RtFgV6kyZL0\nU4/Lw6/fMczDW/eeSKGMuvPw1r1VfUsI+1YRlfLpndbDjZeeNeEPyo2XntWU/HwxuH/sY5P3Pf20\ngnslytGLNFmSydO4PPztG4YYGZsY5UbGnNs3DEWO6uNKMuNq2Jcu6m3axGuljJACe/U0ohdpsiR3\nfcbl4Y9EtAWI2g6VU0G13mGalosuqi7vriBfG43oRZosyV2fcTcQ3RrRtTFOpW8V9daw1+Ldd+H0\n06P3j41VHt1LPAV6kSZLetdnVPCdHtHSd3rQ0jdM2iWZScQF79Wr4Y47mnYquadAL9ICaY6Yb7tq\nAd9et5PSNP0UK2yPkrSXTL2Ud2+Nijl6MzvVzLaa2UtmNmRm3w22n25mT5vZa8HP6SXHrDKz181s\nt5ktbuQvIJI3tdbYA3RNsdjn5ZqZh1+yRHn3VjOvcHXNzIDT3P2YmXUD/xe4BbgWOOzuA2a2Epju\n7ivMbD6wFrgYmA08A5zn7pF3XPT19fng4GA6v5FIGyuvhoHCSDsuCPcPbA5Nw/RO6+GnK69o2LnG\nee896InJAr3/Ppx8cvPOJ6/MbJu791V6XcURvRccC552B/85cDVwf7D9fmBp8Phq4CF3f9/d3wBe\npxD0RaSCtGvsm604cg8L8l/96vjIXUG+uarK0ZtZF7AN+Dhwj7tvMbOZ7v5O8JL9wMzgcS/wYsnh\n+4Jt5e95E3ATwFlnnZXs7EVyJu0a+zhp9bBX3j37qqqjd/dRd78QOBO42Mw+UbbfKYzyq+bu97p7\nn7v3zZgxo5ZDRdperXelJq2xj/v8WtswlPrmN5V3byc13TDl7keA54ArgQNmNgsg+FlsHTQMlDa/\nODPYJiKk36AsycRqkhTR6Oh4cL/nnsn7jx5VcM+qiqkbM5sBjLj7ETPrAT4P3AVsAJYBA8HPJ4JD\nNgAPmtndFCZjzwW2NuDcRdpSXJD96corGNxzeMIqTtU0KKu1XLOWFFFcambRIti+veqPlRapJkc/\nC7g/yNNPAda5+5Nm9gKwzsy+AewBrgNw9yEzWwe8DHwA3BxXcSPSaSo1KHts2/CEBmWPbRum7+zT\nUy19rJTXV949XyqWVzaDyiulk8SVQwJNKZUMK+P8j/89n8MvnhN5TAZChZRJrbxSRNIVl4dvVqlk\nMa8/+yM97LlrCXvuWhIa5PfuVd49D9QCQaTJ4nrdrNm0uyk9aAqpmV5CKp8BBfa8UaAXaZC4OvWo\nydNG9qBR3r1zKdCLVCEuaIftAyIX9oibVE3a2TLK3/4t/NmfRe9XcO8MmowVqSCu/wwQuu/U7imh\nrYOb1X8mbvT+s5/BgujGltJGqp2M1YhepIJKNxeF7SvfVtSo/jPrdwxzzUXxo/4MjOmkRRToRSpI\nsxKmMZOqoElViaNAL1JBpZuLwvZN7Z7C70bGJm2//Pz6+zo9+CD8yZ9E7z97xUagWJffmjbFki0K\n9CIVVKqECdt38knhgf65Vw8lPo+4vPtH/9tWev7LxPduRZtiySYFepEKqqmEKd/3rYgFu2sNvtWU\nREbdadvM9V8l21R1I9IA9az6VCm4z12xccIfm0pVQWmVakr2qOpGJEW1LtKxfPE8lj/yEiMlK3Z3\nT7HIG5+efx76+6M///Ht48G8tLUxRH/jgGS1/JI/CvQiFZSPmKsNmOUZ+skZ+/jR+w9/CF//euFx\n/0B0iWfxLtvyc+kf2Bx7jHQOBXrJvLSWvEsqro4+6jy++5MhRscmpkVHx5zv/mQoUb17khLPLK0l\nK62lQC+ZlnQ0naYkAbP8rtg9dy0p/Ix4faWpsiTrwiZdS1byR22KJROi1lBNsuRd0s+KkmQdV4CR\nw1NPtAAOU8u6qkmWGExyjOSTRvTScut3DLP80ZcYGS1EvOEjx1n+6EtA+umHJN8Qau0oWci7hwf3\n2YtfZfip82s+7yTNztJukCbtS+WV0nKLvvevoQ3Apk/tZurJJ6W64lLSssdK8wSVSiLPXrGR7inG\nmq9eoEArqVF5pTRUmhOkYUG+uP22qxak2p896TeEsKqWmTPh4MHoYx7f3tpJZJEiBXqpWTMnSNNO\nP9Q7QfmrX8GMmHY1Y2MTG40psEsWKNBLzZKUG8aZ1tPNkeOTR/XTerqB6NWYkki6glNcamb1arjj\njlROT6QhFOilZmlPkN7+5QV8++GdE24omhJsT1st3xC09J7khQK91KwR9dldXcbYqE94Xo0kcwVx\n3xA+9SnYvj36WAV3aUeqo5eapV2fvWbT7hOllUUjo16xVr44VzB85PiE/i+V6uLL/fa3hdG7WXiQ\nHxmpvt5dJIsU6KVmSxf1cue1C+md1oNRKE2889qFifPoSVNB9d5MVQzuH/rQ5H1f+cp4cD9J33ul\nzemfsCSS5gRp0lRQkj8QyrtLJ9KIXlouaSqo2tYE1103PnoPU0srApF2pEAvLZc0FRT3B+KDD8aD\n+yOPTD722DEFd+kcaoEgba286ub5VdFtDD75SXjppSaenEiDqQWCVC1JiWLcMavX72Ltlr2MutNl\nxg2XzOH7Sxc25PyWLuo90d/9zYjjMzCWEWkpjehzptagHbfeaNRxcccM7jnMAy++NemYGy89K1Gw\nj/qsj//iMzy5NqRcJpCBf9YiDacRfQdK0oMmSTuDuGP2H30v9Ji1W/YmCvSln+UOb/1Vof3vqyGv\nPXAAPvrRmj9CJPcU6HMkSdBOe4m6qIH0aMIh9ttHjkcu3FGk0btIPFXd5EiSoJ1k9aS4Y7oiahij\ntkcpVsy8GRHkL7tzs6pmRKqkQJ8jSYL25eeH99yN2g7xZY03XDIn9Jio7aXuuSe+3v3sFRs5e8VG\nzl/9lJbDE6mBUjc5kqQF73OvHqppO8R3gCzuq6XqJm6w//Ofw9Cx4gQzWsBDJAFV3eRMrVU3c1du\njNz35kB8brweakUgUj9V3XSoWnvQdJmFTpTWmlOvhoK7SGtUzNGb2Rwze87MXjazITO7Jdh+upk9\nbWavBT+nlxyzysxeN7PdZra4kb+A1CeqGiZplUy5n/xEfWZEWq2aEf0HwJ+7+3Yz+wNgm5k9DXwd\neNbdB8xsJbASWGFm84HrgQXAbOAZMzvP3Ucj3l9aaPrU7tDFuadPLSzjl3QR8LjR+9at8OlPJz5l\nEalRxUDv7u8A7wSP/8PMXgF6gauBzwYvux/4N2BFsP0hd38feMPMXgcuBl5I++SlflEjaffab8BS\nakYkm2oqrzSzucAiYAswM/gjALAfmBk87gX2lhy2L9gmGXQ0ZFHu4vZqFvYopmWUmhHJrqoDvZl9\nCHgMuNXdf1O6zwulOzX9X9nMbjKzQTMbPHQoupRPGiuu9j7qRqtfDp2i4C7SRqoK9GbWTSHI/5O7\n/zjYfMDMZgX7ZwEHg+3DQOndMWcG2yZw93vdvc/d+2bMiL45Rxor7uan8j8Ce+5awp67lrD/gf5J\n7/Mv/6LgLpJVFXP0ZmbA3wOvuPvdJbs2AMuAgeDnEyXbHzSzuylMxp4LbE3zpDtd0gnSMHE3PwEn\nWgBHqTWwp3nuIlKdaqpu+oH/Duwys53Btr+kEODXmdk3gD3AdQDuPmRm64CXKVTs3KyKm/Qk6VBZ\nyeCew+w/+h4O7D/6XklwD3+/pKP2Rpy7iFSmO2PbTP/A5tCFtHun9fDTlVfUvOjH6vW7eODFtxj5\n9Wm8fd9nI1+Xxj+TSucuIrXRnbE5Fdehshi0i0bdTzyPCvY/uGYhEL7v3nvhT/+0vvMtP8datotI\nOtS9ss3EVcms3bI3dF/59kolkcUukWkG+eI51rJdRNKhQN9m4qpk4toZ9PRUF9zPXlFoctaIXjdx\n5y4ijaPUTZuJq5L59rqdjJXE+tFjp7Dvnj+KfK+xMfjOE7tC13itpn98mucuIo2jQN9iaZYbdhmM\nObFL791xB6xePf68mLuvZQK3HrV21xSR+qnqpoXKyw2hkMq489qFkcEw6phXv39l7Gdl4H9mEUmZ\nqm7aQJLFvEuPOfDwxbz3ZvRdxcV8e0HjFhERkWxToG+hJOWG+w69z1t3Rwfts5ZvxMqm2KekP68q\nIm1Egb6FZk/rCb2BKKzccLwI5ouT9n344l/wiWv2hL4XMGGCVkQ6j8orW6hSuWG19e6zv/AayxfP\niyyJbESppIi0DwX6Flq6qJc7r11I77QejEIrgPnD/VxzUW9sC+DHtw9z2Z2bTxxTnLxt9LKAItKe\nlLoJ0cwOi0sX9fKlhb10d8ObEa957z045ZSJx4SdT29EKqhXd56KdDSN6MsUyxeHjxzHGe+wuH7H\n8In9/QObOWflRvoHNp/YnkQxLdPdPXnfzTeP93cvDfJxdOepiITRiL5MpeXz6m2z28h1VXXnqYiE\n0Q1TZc5ZuTF0TUQjukqmUpvdhx6CG26I/sxm/E+gBT9E8kc3TAVqDXBxJY+11L27w5SYxNixY3Da\nacVUUGMDsBb8EOlsuc7RV8q3h6llDdWi0u3FvHtYkL/11vG8ezHI13p+SVRKR4lIvuV6RF+pxUDc\naD9qe1ifmedXXYGtij6PqNRMkhYISWjBD5HOlutAHxfgKqUzwgJt6R+BX+w4jQPrLon87Gry7s0K\nwLXcgSsi+ZPr1E1cqiVpOuOai3p5ftUVoUH+0KHx1Ey95xen1hJPlV2KdLZcB/rLzw/v7Hj5+TNq\nGk3HtSLo//zvTgT3M86o7fyWL55Hd9fEN+3ustgAnCSvH3YHblwrZBHJl1ynbp579VDk9mlTu3n3\ndyOT9k2bWrh76brr4JFHot+72AL4wBRj/Y4LkgfN8tF/hW8DSfP6WvBDpHPlOtDHjdo/0jP5dtSR\nd6ey867LsdvC3++C2/+VI8cn/nEYGXNu3zCUKIiu2bSbkbLWkiNjHhu0NbEqIrXKdaD/SE/3pMBc\n3H60ZHvc0nvvvAMf+1jh8dyVk98LOPEZtdbsJwnamlidSDeCiVSW6xx9VLsBM3j77z7HnruWhAb5\n1avHJ1WLQb6SJLnzJJOxmlgd16z7EETaXa4D/ZGyHPyxodnsuWsJO2/7Ar//zamTXn/+6qd4fPsw\nd9wR/n7Tp4Z0Hwu2J6niSRK0NbE6TjeCiVQn16mb2dN62Hf4Pd5a88eRr7nszs0lX/vjA+ZtVy1g\n+aMvMTI6nlfv7jJuu2oB33p4Z+gxcWmYpE3INLFaoPkKKadUXrjcBvrHH4fnV4U3Gvv2Pw7xv25c\nEDyLbkZWbumiXgb3HGbtlr2MutNlxtc+PYeli3pZs2l3oty5gnZymq+QUurpFC1XqZuhITj33EIO\n/tprx7f3fPwAZ978zIml917cdyDR+6/fMcxj24ZPrNg06s5j24ZZv2NYufMW0DWXUkrlRcvNiP6F\nF+Cyy8afz5kDH3zu3zl55m8mvTbpV/u4f0jFNsX62tg86r/f/tJMtWQllZfF9FFuAv2FF8Kll8It\nt8D11xe29Q+MMHxk8muTfrWv9A9JaZjm0zVvX2mnWrKQystq+ig3qZuensKovhjkIf2v9kl704jI\nZGmnWrKQystq+ig3gT5M2qWIWfiHJJIXaadaslB6nJX0UbncpG6iJPlqH5VjU05YJD2NSLW0OpWX\nhfRRmNwH+lpV06degV2kfssXzwtdyKedvyFn9XfKdeomiazm2ETyJguplrRl9XfSiL5MVnNsInmU\nx2/IWfydNKIvo8oaEckbBfoyqqwRkbypGOjN7B/M7KCZ/axk2+lm9rSZvRb8nF6yb5WZvW5mu81s\ncaNOvFGymmMTEUnKvMJK1mb2h8Ax4Efu/olg218Bh919wMxWAtPdfYWZzQfWAhcDs4FngPPcfTTi\n7QHo6+vzwcHB+n8bEZEOYmbb3L2v0usqTsa6+/8xs7llm68GPhs8vh/4N2BFsP0hd38feMPMXqcQ\n9F+o9sSTyGJvCRGRrEiao5/p7u8Ej/cDM4PHvcDektftC7ZNYmY3mdmgmQ0eOhS+iHc1tMqQiEi8\nuidjvZD7ic//hB93r7v3uXvfjBkzEn++6t5FROIlDfQHzGwWQPDzYLB9GJhT8rozg20No7p3EZF4\nSQP9BmBZ8HgZ8ETJ9uvN7BQzOwc4F9ha3ynGU927iEi8asor11KYTJ1nZvvM7BvAAPB5M3sN+KPg\nOe4+BKwDXgaeAm6uVHFTL9W9i4jEq6bq5oaIXZ+LeP0PgB/Uc1K1UEdJEZF4ueh1k8XeEiIiWZGL\nQC/SCXS/iCSlQC/SBrK6Fqm0BzU1E2kDul9E6qFAL9IGdL+I1EOBXqQN6H4RqYcCvUgb0P0iUg9N\nxoq0Ad0vIvVQoBdpE7pfRJJSoBepk+rbJesU6EXqoPp2aQeajBWpg+rbpR0o0IvUQfXt0g4U6EXq\noPp2aQcK9CJ1UH27tANNxorUQfXt0g46OtCrLE7SoPp2ybqODfQqixORTtGxOXqVxYlIp+jYQK+y\nOBHpFB0b6FUWJyKdomMDvcriRKRTdOxkrMriRKRTdGygB5XFiUhztaqku6MDvYhIs7SypLtjc/Qi\nIs3UypJuBXoRkSZoZUm3Ar2ISBO0sqRbgV5EpAlaWdKtyVgRkSZoZUm3Ar2ISJO0qqRbgV4yQS2j\nRRpHgV5aTi2jRRpLk7HScmoZLdJYCvTScmoZLdJYCvTScmoZLdJYCvTScmoZLdJYmoyVllPLaJHG\naligN7Mrgb8BuoD73H2gUZ8l7U8to0UapyGpGzPrAu4BvgjMB24ws/mN+CwREYnXqBz9xcDr7v5L\nd/898BBwdYM+S0REYjQq0PcCe0ue7wu2iYhIk7Ws6sbMbjKzQTMbPHToUKtOQ0Qk9xoV6IeBOSXP\nzwy2neDu97p7n7v3zZgxo0GnISIijQr0/w8418zOMbOTgeuBDQ36LBERidGQ8kp3/8DMvglsolBe\n+Q/uPtSIzxIRkXjm7q0+B8zsELAnhbc6A/hVCu+TB7oWBboOBboO4/J0Lc5294q570wE+rSY2aC7\n97X6PLJA16JA16FA12FcJ14L9boREck5BXoRkZzLW6C/t9UnkCG6FgW6DgW6DuM67lrkKkcvIiKT\n5W1ELyIiZdo20JvZHDN7zsxeNrMhM7sl2H66mT1tZq8FP6e3+lwbycxONbOtZvZScB2+G2zvqOtQ\nZGZdZrbDzJ4MnnfqdXjTzHaZ2U4zGwy2ddy1MLNpZvaomb1qZq+Y2X/txOvQtoEe+AD4c3efD1wK\n3By0Ql4JPOvu5wLPBs/z7H3gCne/ALgQuNLMLqXzrkPRLcArJc879ToAXO7uF5aUEnbitfgb4Cl3\nPx+4gMK/jc67Du6ei/+AJ4DPA7uBWcG2WcDuVp9bE6/BVGA7cEknXgcKPZWeBa4Angy2ddx1CH7X\nN4EzyrZ11LUAPgK8QTAX2anXwd3bekR/gpnNBRYBW4CZ7v5OsGs/MLNFp9U0QbpiJ3AQeNrdO/I6\nAH8N/AUwVrKtE68DgAPPmNk2M7sp2NZp1+Ic4BDwwyCdd5+ZnUbnXYf2D/Rm9iHgMeBWd/9N6T4v\n/MnOfVmRu4+6+4UURrQXm9knyvbn/jqY2ZeAg+6+Leo1nXAdSnwm+DfxRQppzT8s3dkh1+Ik4CLg\n79x9EfBbytI0HXId2jvQm1k3hSD/T+7+42DzATObFeyfRWGU2xHc/QjwHHAlnXcd+oEvm9mbFFY0\nu8LMHqDzrgMA7j4c/DwIPE5h1bdOuxb7gH3BN1yARykE/k67Du0b6M3MgL8HXnH3u0t2bQCWBY+X\nUcjd55aZzTCzacHjHgrzFK/SYdfB3Ve5+5nuPpdCW+zN7n4jHXYdAMzsNDP7g+Jj4AvAz+iwa+Hu\n+4G9ZjYv2PQ54GU67DpAG98wZWafAf4d2MV4TvYvKeTp1wFnUeiIeZ27H27JSTaBmX0SuJ9CO+gp\nwDp3/56Z/Sc66DqUMrPPAv/T3b/UidfBzP4zhVE8FNIXD7r7Dzr0WlwI3AecDPwS+B8E/z+hk65D\nuwZ6ERGpTtumbkREpDoK9CIiOadALyKScwr0IiI5p0AvIpJzCvQiIjmnQC8iknMK9CIiOff/AbSj\nDHSxvIgbAAAAAElFTkSuQmCC\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x11d9de750>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "outlierCleaner() is returning an empty list, no refitting to be done\n"
+     ]
+    }
+   ],
+   "source": [
+    "# %load outlier_removal_regression.py\n",
+    "#!/usr/bin/python\n",
+    "\n",
+    "import random\n",
+    "import numpy\n",
+    "import matplotlib.pyplot as plt\n",
+    "import pickle\n",
+    "\n",
+    "from outlier_cleaner import outlierCleaner\n",
+    "\n",
+    "\n",
+    "### load up some practice data with outliers in it\n",
+    "ages = pickle.load( open(\"practice_outliers_ages.pkl\", \"r\") )\n",
+    "net_worths = pickle.load( open(\"practice_outliers_net_worths.pkl\", \"r\") )\n",
+    "\n",
+    "\n",
+    "\n",
+    "### ages and net_worths need to be reshaped into 2D numpy arrays\n",
+    "### second argument of reshape command is a tuple of integers: (n_rows, n_columns)\n",
+    "### by convention, n_rows is the number of data points\n",
+    "### and n_columns is the number of features\n",
+    "ages       = numpy.reshape( numpy.array(ages), (len(ages), 1))\n",
+    "net_worths = numpy.reshape( numpy.array(net_worths), (len(net_worths), 1))\n",
+    "from sklearn.cross_validation import train_test_split\n",
+    "ages_train, ages_test, net_worths_train, net_worths_test = train_test_split(ages, net_worths, test_size=0.1, random_state=42)\n",
+    "\n",
+    "### fill in a regression here!  Name the regression object reg so that\n",
+    "### the plotting code below works, and you can see what your regression looks like\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "\n",
+    "reg = LinearRegression()\n",
+    "reg.fit(ages_train, net_worths_train)\n",
+    "print \"slope: \", reg.coef_\n",
+    "print \"intercept:\", reg.intercept_\n",
+    "\n",
+    "try:\n",
+    "    plt.plot(ages, reg.predict(ages), color=\"blue\")\n",
+    "except NameError:\n",
+    "    pass\n",
+    "plt.scatter(ages, net_worths)\n",
+    "plt.show()\n",
+    "\n",
+    "\n",
+    "### identify and remove the most outlier-y points\n",
+    "cleaned_data = []\n",
+    "try:\n",
+    "    predictions = reg.predict(ages_train)\n",
+    "    cleaned_data = outlierCleaner( predictions, ages_train, net_worths_train )\n",
+    "except NameError:\n",
+    "    print \"your regression object doesn't exist, or isn't name reg\"\n",
+    "    print \"can't make predictions to use in identifying outliers\"\n",
+    "\n",
+    "### only run this code if cleaned_data is returning data\n",
+    "if len(cleaned_data) > 0:\n",
+    "    ages, net_worths, errors = zip(*cleaned_data)\n",
+    "    ages       = numpy.reshape( numpy.array(ages), (len(ages), 1))\n",
+    "    net_worths = numpy.reshape( numpy.array(net_worths), (len(net_worths), 1))\n",
+    "\n",
+    "    ### refit your cleaned data!\n",
+    "    try:\n",
+    "        reg.fit(ages, net_worths)\n",
+    "        plt.plot(ages, reg.predict(ages), color=\"blue\")\n",
+    "    except NameError:\n",
+    "        print \"you don't seem to have regression imported/created,\"\n",
+    "        print \"   or else your regression object isn't named reg\"\n",
+    "        print \"   either way, only draw the scatter plot of the cleaned data\"\n",
+    "    plt.scatter(ages, net_worths)\n",
+    "    plt.xlabel(\"ages\")\n",
+    "    plt.ylabel(\"net worths\")\n",
+    "    plt.show()\n",
+    "\n",
+    "\n",
+    "else:\n",
+    "    print \"outlierCleaner() is returning an empty list, no refitting to be done\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8782624703664671"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "reg.score(ages_test, net_worths_test)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
