feat: Visaulze the Enron dataset

--- a/Machine-Learning/Mini-Project.ipynb
+++ b/Machine-Learning/Mini-Project.ipynb
@@ -2139,6 +2139,42 @@
     "collapsed": true
    },
    "outputs": [],
+   "source": [
+    "# %load enron_outliers.py\n",
+    "#!/usr/bin/python\n",
+    "\n",
+    "import pickle\n",
+    "import sys\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "sys.path.append(\"../tools/\")\n",
+    "from feature_format import featureFormat, targetFeatureSplit\n",
+    "\n",
+    "\n",
+    "### read in data dictionary, convert to numpy array\n",
+    "data_dict = pickle.load( open(\"../final_project/final_project_dataset.pkl\", \"r\") )\n",
+    "features = [\"salary\", \"bonus\"]\n",
+    "data = featureFormat(data_dict, features)\n",
+    "\n",
+    "\n",
+    "### your code below\n",
+    "for item in data:\n",
+    "    salary = item[0]\n",
+    "    bonus = item[1]\n",
+    "    plt.scatter(salary, bonus)\n",
+    "\n",
+    "plt.xlabel('salary')\n",
+    "plt.ylabel('bonus')\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": []
   }
  ],
