feat: Find the max and min of exercised stock options

--- a/Machine-Learning/Mini-Project.ipynb
+++ b/Machine-Learning/Mini-Project.ipynb
@@ -1073,7 +1073,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "metadata": {
     "collapsed": true
    },
@@ -2548,6 +2548,57 @@
     "    Draw(pred, finance_features, poi, mark_poi=False, name=\"clusters.pdf\", f1_name=feature_1, f2_name=feature_2)\n",
     "except NameError:\n",
     "    print \"no predictions object named pred found, no clusters to plot\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "min:  0\n",
+      "max:  34348384\n"
+     ]
+    }
+   ],
+   "source": [
+    "min = 0\n",
+    "max = 0\n",
+    "\n",
+    "for key in data_dict:\n",
+    "    stock = data_dict[key]['exercised_stock_options']\n",
+    "    if stock != \"NaN\":\n",
+    "        if stock > max_stock:\n",
+    "            max_stock = stock\n",
+    "        if stock < min_stock:\n",
+    "            min_stock = stock\n",
+    "\n",
+    "print \"min: \", min_stock\n",
+    "print \"max: \", max_stock"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "min:  3285\n",
+      "max:  34348384\n"
+     ]
+    }
+   ],
+   "source": [
+    "stock = [data_dict[key]['exercised_stock_options'] for key in data_dict\n",
+    "         if data_dict[key]['exercised_stock_options'] != 'NaN']\n",
+    "print \"min: \", min(stock)\n",
+    "print \"max: \", max(stock)"
    ]
   },
   {
