feat: Find the max and min of salary

--- a/Machine-Learning/Mini-Project.ipynb
+++ b/Machine-Learning/Mini-Project.ipynb
@@ -2552,36 +2552,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "min:  0\n",
-      "max:  34348384\n"
-     ]
-    }
-   ],
-   "source": [
-    "min = 0\n",
-    "max = 0\n",
-    "\n",
-    "for key in data_dict:\n",
-    "    stock = data_dict[key]['exercised_stock_options']\n",
-    "    if stock != \"NaN\":\n",
-    "        if stock > max_stock:\n",
-    "            max_stock = stock\n",
-    "        if stock < min_stock:\n",
-    "            min_stock = stock\n",
-    "\n",
-    "print \"min: \", min_stock\n",
-    "print \"max: \", max_stock"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 34,
    "metadata": {},
    "outputs": [
@@ -2599,6 +2569,36 @@
     "         if data_dict[key]['exercised_stock_options'] != 'NaN']\n",
     "print \"min: \", min(stock)\n",
     "print \"max: \", max(stock)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "min:  477\n",
+      "max:  1111258\n"
+     ]
+    }
+   ],
+   "source": [
+    "min_salary = float(\"+inf\")\n",
+    "max_salary = float(\"-inf\")\n",
+    "\n",
+    "for key in data_dict:\n",
+    "    salary = data_dict[key]['salary']\n",
+    "    if salary != \"NaN\":\n",
+    "        if salary > max_salary:\n",
+    "            max_salary = salary\n",
+    "        if salary < min_salary:\n",
+    "            min_salary = salary\n",
+    "\n",
+    "print \"min: \", min_salary\n",
+    "print \"max: \", max_salary"
    ]
   },
   {
