feat: Run parse_out_e,ail_text.py for future analysis

--- a/Machine-Learning/Mini-Project.ipynb
+++ b/Machine-Learning/Mini-Project.ipynb
@@ -2726,6 +2726,42 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Errno 2] No such file or directory: 'github/udacity-dand/machine-learning/supporting-file'\n",
+      "/Users/guanrongfu/GitHub/Udacity-DAND/Machine-Learning\n"
+     ]
+    }
+   ],
+   "source": [
+    "cd github/udacity-dand/machine-learning/supporting-file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mini-Project.ipynb       \u001b[34mmaildir\u001b[m\u001b[m/\r\n",
+      "enron_mail_20150507.tgz  \u001b[34msupporting-file\u001b[m\u001b[m/\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "ls"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
