feat: load and run parse_out_email_text.py

--- a/Machine-Learning/Mini-Project.ipynb
+++ b/Machine-Learning/Mini-Project.ipynb
@@ -2726,38 +2726,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[Errno 2] No such file or directory: 'github/udacity-dand/machine-learning/supporting-file'\n",
-      "/Users/guanrongfu/GitHub/Udacity-DAND/Machine-Learning\n"
+      "\n",
+      "\n",
+      "Hi Everyone  If you can read this message youre properly using parseOutText  Please proceed to the next part of the project\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "cd github/udacity-dand/machine-learning/supporting-file"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 74,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Mini-Project.ipynb       \u001b[34mmaildir\u001b[m\u001b[m/\r\n",
-      "enron_mail_20150507.tgz  \u001b[34msupporting-file\u001b[m\u001b[m/\r\n"
-     ]
-    }
-   ],
-   "source": [
-    "ls"
+    "# %load parse_out_email_text.py\n",
+    "#!/usr/bin/python\n",
+    "\n",
+    "from nltk.stem.snowball import SnowballStemmer\n",
+    "import string\n",
+    "\n",
+    "def parseOutText(f):\n",
+    "    \"\"\" given an opened email file f, parse out all text below the\n",
+    "        metadata block at the top\n",
+    "        (in Part 2, you will also add stemming capabilities)\n",
+    "        and return a string that contains all the words\n",
+    "        in the email (space-separated) \n",
+    "        \n",
+    "        example use case:\n",
+    "        f = open(\"email_file_name.txt\", \"r\")\n",
+    "        text = parseOutText(f)\n",
+    "        \n",
+    "        \"\"\"\n",
+    "\n",
+    "\n",
+    "    f.seek(0)  ### go back to beginning of file (annoying)\n",
+    "    all_text = f.read()\n",
+    "\n",
+    "    ### split off metadata\n",
+    "    content = all_text.split(\"X-FileName:\")\n",
+    "    words = \"\"\n",
+    "    if len(content) > 1:\n",
+    "        ### remove punctuation\n",
+    "        text_string = content[1].translate(string.maketrans(\"\", \"\"), string.punctuation)\n",
+    "\n",
+    "        ### project part 2: comment out the line below\n",
+    "        words = text_string\n",
+    "\n",
+    "        ### split the text string into individual words, stem each word,\n",
+    "        ### and append the stemmed word to words (make sure there's a single\n",
+    "        ### space between each stemmed word)\n",
+    "        \n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "    return words\n",
+    "\n",
+    "    \n",
+    "\n",
+    "def main():\n",
+    "    ff = open(\"../text_learning/test_email.txt\", \"r\")\n",
+    "    text = parseOutText(ff)\n",
+    "    print text\n",
+    "\n",
+    "\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    main()\n",
+    "\n"
    ]
   },
   {
