--- a/Machine-Learning/Mini-Project.ipynb
+++ b/Machine-Learning/Mini-Project.ipynb
@@ -2800,6 +2800,85 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "hi everyon  if you can read this messag your proper use parseouttext  pleas proceed to the next part of the project\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# %load parse_out_email_text.py\n",
+    "#!/usr/bin/python\n",
+    "\n",
+    "from nltk.stem.snowball import SnowballStemmer\n",
+    "import string\n",
+    "\n",
+    "def parseOutText(f):\n",
+    "    \"\"\" given an opened email file f, parse out all text below the\n",
+    "        metadata block at the top\n",
+    "        (in Part 2, you will also add stemming capabilities)\n",
+    "        and return a string that contains all the words\n",
+    "        in the email (space-separated)\n",
+    "\n",
+    "        example use case:\n",
+    "        f = open(\"email_file_name.txt\", \"r\")\n",
+    "        text = parseOutText(f)\n",
+    "\n",
+    "        \"\"\"\n",
+    "\n",
+    "\n",
+    "    f.seek(0)  ### go back to beginning of file (annoying)\n",
+    "    all_text = f.read()\n",
+    "\n",
+    "    ### split off metadata\n",
+    "    content = all_text.split(\"X-FileName:\")\n",
+    "    words = \"\"\n",
+    "    new_words = []\n",
+    "    if len(content) > 1:\n",
+    "        ### remove punctuation\n",
+    "        text_string = content[1].translate(string.maketrans(\"\", \"\"), string.punctuation)\n",
+    "\n",
+    "        ### project part 2: comment out the line below\n",
+    "        # words = text_string\n",
+    "\n",
+    "        ### split the text string into individual words, stem each word,\n",
+    "        ### and append the stemmed word to words (make sure there's a single\n",
+    "        ### space between each stemmed word)\n",
+    "        stemmer = SnowballStemmer('english')\n",
+    "\n",
+    "        old_words = text_string.split(' ')\n",
+    "\n",
+    "        for word in old_words:\n",
+    "            word = stemmer.stem(word)\n",
+    "            new_words.append(word)\n",
+    "\n",
+    "        words = ' '.join(new_words)\n",
+    "\n",
+    "    return words\n",
+    "\n",
+    "\n",
+    "\n",
+    "def main():\n",
+    "    ff = open(\"../text_learning/test_email.txt\", \"r\")\n",
+    "    text = parseOutText(ff)\n",
+    "    print text\n",
+    "\n",
+    "\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    main()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
