feat: Forget the save last time, rerun parse_out_email_text.py

--- a/Machine-Learning/Mini-Project.ipynb
+++ b/Machine-Learning/Mini-Project.ipynb
@@ -2800,17 +2800,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "\n",
-      "hi everyon  if you can read this messag your proper use parseouttext  pleas proceed to the next part of the project\n",
-      "\n"
+      "hi everyon if you can read this messag your proper use parseouttext pleas proceed to the next part of the project\n"
      ]
     }
    ],
@@ -2854,7 +2851,7 @@
     "        ### space between each stemmed word)\n",
     "        stemmer = SnowballStemmer('english')\n",
     "\n",
-    "        old_words = text_string.split(' ')\n",
+    "        old_words = text_string.split()\n",
     "\n",
     "        for word in old_words:\n",
     "            word = stemmer.stem(word)\n",
@@ -2876,6 +2873,15 @@
     "if __name__ == '__main__':\n",
     "    main()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
