--- a/Machine-Learning/Mini-Project.ipynb
+++ b/Machine-Learning/Mini-Project.ipynb
@@ -2876,12 +2876,112 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "emails processed\n"
+     ]
+    }
+   ],
+   "source": [
+    "# %load vectorize_text.py\n",
+    "#!/usr/bin/python\n",
+    "\n",
+    "import os\n",
+    "import pickle\n",
+    "import re\n",
+    "import sys\n",
+    "\n",
+    "sys.path.append( \"../tools/\" )\n",
+    "from parse_out_email_text import parseOutText\n",
+    "\n",
+    "\"\"\"\n",
+    "    Starter code to process the emails from Sara and Chris to extract\n",
+    "    the features and get the documents ready for classification.\n",
+    "\n",
+    "    The list of all the emails from Sara are in the from_sara list\n",
+    "    likewise for emails from Chris (from_chris)\n",
+    "\n",
+    "    The actual documents are in the Enron email dataset, which\n",
+    "    you downloaded/unpacked in Part 0 of the first mini-project. If you have\n",
+    "    not obtained the Enron email corpus, run startup.py in the tools folder.\n",
+    "\n",
+    "    The data is stored in lists and packed away in pickle files at the end.\n",
+    "\"\"\"\n",
+    "\n",
+    "from_sara  = open(\"from_sara.txt\", \"r\")\n",
+    "from_chris = open(\"from_chris.txt\", \"r\")\n",
+    "\n",
+    "from_data = []\n",
+    "word_data = []\n",
+    "\n",
+    "### temp_counter is a way to speed up the development--there are\n",
+    "### thousands of emails from Sara and Chris, so running over all of them\n",
+    "### can take a long time\n",
+    "### temp_counter helps you only look at the first 200 emails in the list so you\n",
+    "### can iterate your modifications quicker\n",
+    "temp_counter = 0\n",
+    "remove_list = [\"sara\", \"shackleton\", \"chris\", \"germani\"]\n",
+    "\n",
+    "for name, from_person in [(\"sara\", from_sara), (\"chris\", from_chris)]:\n",
+    "    for path in from_person:\n",
+    "        ### only look at first 200 emails when developing\n",
+    "        ### once everything is working, remove this line to run over full dataset\n",
+    "        temp_counter += 1\n",
+    "        if temp_counter < 200:\n",
+    "            path = os.path.join('..', path[:-1])\n",
+    "            email = open(path, \"r\")\n",
+    "            ### use parseOutText to extract the text from the opened email\n",
+    "            words = parseOutText(email)\n",
+    "            ### use str.replace() to remove any instances of the words\n",
+    "            ### [\"sara\", \"shackleton\", \"chris\", \"germani\"]\n",
+    "            for item in remove_list:\n",
+    "                words = words.replace(item, '')\n",
+    "\n",
+    "            ### append the text to word_data\n",
+    "            word_data.append(words)\n",
+    "            ### append a 0 to from_data if email is from Sara, and 1 if email is from Chris\n",
+    "            from_data.append(0 if name == 'Sara' else 1)\n",
+    "\n",
+    "            email.close()\n",
+    "\n",
+    "print \"emails processed\"\n",
+    "from_sara.close()\n",
+    "from_chris.close()\n",
+    "\n",
+    "pickle.dump( word_data, open(\"your_word_data.pkl\", \"w\") )\n",
+    "pickle.dump( from_data, open(\"your_email_authors.pkl\", \"w\") )\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "### in Part 4, do TfIdf vectorization here\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "u'tjonesnsf stephani and sam need nymex calendar'"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "word_data[152]"
+   ]
   },
   {
    "cell_type": "code",
