feat: Run the updated vectorize_text.py

--- a/Machine-Learning/Mini-Project.ipynb
+++ b/Machine-Learning/Mini-Project.ipynb
@@ -2985,6 +2985,122 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "emails processed\n"
+     ]
+    }
+   ],
+   "source": [
+    "# %load vectorize_text.py\n",
+    "#!/usr/bin/python\n",
+    "\n",
+    "import os\n",
+    "import pickle\n",
+    "import re\n",
+    "import sys\n",
+    "\n",
+    "sys.path.append( \"../tools/\" )\n",
+    "from parse_out_email_text import parseOutText\n",
+    "\n",
+    "\"\"\"\n",
+    "    Starter code to process the emails from Sara and Chris to extract\n",
+    "    the features and get the documents ready for classification.\n",
+    "\n",
+    "    The list of all the emails from Sara are in the from_sara list\n",
+    "    likewise for emails from Chris (from_chris)\n",
+    "\n",
+    "    The actual documents are in the Enron email dataset, which\n",
+    "    you downloaded/unpacked in Part 0 of the first mini-project. If you have\n",
+    "    not obtained the Enron email corpus, run startup.py in the tools folder.\n",
+    "\n",
+    "    The data is stored in lists and packed away in pickle files at the end.\n",
+    "\"\"\"\n",
+    "\n",
+    "from_sara  = open(\"from_sara.txt\", \"r\")\n",
+    "from_chris = open(\"from_chris.txt\", \"r\")\n",
+    "\n",
+    "from_data = []\n",
+    "word_data = []\n",
+    "\n",
+    "### temp_counter is a way to speed up the development--there are\n",
+    "### thousands of emails from Sara and Chris, so running over all of them\n",
+    "### can take a long time\n",
+    "### temp_counter helps you only look at the first 200 emails in the list so you\n",
+    "### can iterate your modifications quicker\n",
+    "temp_counter = 0\n",
+    "remove_list = [\"sara\", \"shackleton\", \"chris\", \"germani\"]\n",
+    "\n",
+    "for name, from_person in [(\"sara\", from_sara), (\"chris\", from_chris)]:\n",
+    "    for path in from_person:\n",
+    "        ### only look at first 200 emails when developing\n",
+    "        ### once everything is working, remove this line to run over full dataset\n",
+    "        temp_counter += 1\n",
+    "        if temp_counter < 200:\n",
+    "            path = os.path.join('..', path[:-1])\n",
+    "            email = open(path, \"r\")\n",
+    "            ### use parseOutText to extract the text from the opened email\n",
+    "            words = parseOutText(email)\n",
+    "            ### use str.replace() to remove any instances of the words\n",
+    "            ### [\"sara\", \"shackleton\", \"chris\", \"germani\"]\n",
+    "            for item in remove_list:\n",
+    "                words = words.replace(item, '')\n",
+    "\n",
+    "            ### append the text to word_data\n",
+    "            word_data.append(words)\n",
+    "            ### append a 0 to from_data if email is from Sara, and 1 if email is from Chris\n",
+    "            from_data.append(0 if name == 'Sara' else 1)\n",
+    "\n",
+    "            email.close()\n",
+    "\n",
+    "print \"emails processed\"\n",
+    "from_sara.close()\n",
+    "from_chris.close()\n",
+    "\n",
+    "pickle.dump( word_data, open(\"your_word_data.pkl\", \"w\") )\n",
+    "pickle.dump( from_data, open(\"your_email_authors.pkl\", \"w\") )\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "### in Part 4, do TfIdf vectorization here\n",
+    "\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "\n",
+    "tfidf = TfidfVectorizer(stop_words='english')\n",
+    "new_word_data = tfidf.fit_transform(word_data)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "get_feature_names not found",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-101-50c38fd0fc17>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mnew_word_data\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_feature_names\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m//anaconda/envs/python2/lib/python2.7/site-packages/scipy/sparse/base.pyc\u001b[0m in \u001b[0;36m__getattr__\u001b[0;34m(self, attr)\u001b[0m\n\u001b[1;32m    574\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgetnnz\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    575\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 576\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mAttributeError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mattr\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m\" not found\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    577\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    578\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mtranspose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxes\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcopy\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: get_feature_names not found"
+     ]
+    }
+   ],
+   "source": [
+    "new_word_data.get_feature_names()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
