feat: Find the unique words in tfidf

--- a/Machine-Learning/Mini-Project.ipynb
+++ b/Machine-Learning/Mini-Project.ipynb
@@ -2985,7 +2985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -3033,15 +3033,15 @@
     "### can take a long time\n",
     "### temp_counter helps you only look at the first 200 emails in the list so you\n",
     "### can iterate your modifications quicker\n",
-    "temp_counter = 0\n",
+    "\n",
     "remove_list = [\"sara\", \"shackleton\", \"chris\", \"germani\"]\n",
     "\n",
     "for name, from_person in [(\"sara\", from_sara), (\"chris\", from_chris)]:\n",
     "    for path in from_person:\n",
     "        ### only look at first 200 emails when developing\n",
     "        ### once everything is working, remove this line to run over full dataset\n",
-    "        temp_counter += 1\n",
-    "        if temp_counter < 200:\n",
+    "\n",
+    "\n",
     "            path = os.path.join('..', path[:-1])\n",
     "            email = open(path, \"r\")\n",
     "            ### use parseOutText to extract the text from the opened email\n",
@@ -3079,24 +3079,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "get_feature_names not found",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-101-50c38fd0fc17>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mnew_word_data\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_feature_names\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m//anaconda/envs/python2/lib/python2.7/site-packages/scipy/sparse/base.pyc\u001b[0m in \u001b[0;36m__getattr__\u001b[0;34m(self, attr)\u001b[0m\n\u001b[1;32m    574\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgetnnz\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    575\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 576\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mAttributeError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mattr\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m\" not found\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    577\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    578\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mtranspose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxes\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcopy\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: get_feature_names not found"
-     ]
+     "data": {
+      "text/plain": [
+       "38757"
+      ]
+     },
+     "execution_count": 107,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "new_word_data.get_feature_names()"
+    "len(set(tfidf.get_feature_names()))"
    ]
   },
   {
