feat: Generate a decision tree by running find_signature.py

--- a/Machine-Learning/Mini-Project.ipynb
+++ b/Machine-Learning/Mini-Project.ipynb
@@ -2985,7 +2985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [
     {
@@ -3054,7 +3054,7 @@
     "            ### append the text to word_data\n",
     "            word_data.append(words)\n",
     "            ### append a 0 to from_data if email is from Sara, and 1 if email is from Chris\n",
-    "            from_data.append(0 if name == 'Sara' else 1)\n",
+    "            from_data.append(0 if name == 'sara' else 1)\n",
     "\n",
     "            email.close()\n",
     "\n",
@@ -3115,6 +3115,78 @@
    ],
    "source": [
     "tfidf.get_feature_names()[34597]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Feature Selection"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.947667804323\n"
+     ]
+    }
+   ],
+   "source": [
+    "# %load find_signature.py\n",
+    "#!/usr/bin/python\n",
+    "\n",
+    "import pickle\n",
+    "import numpy\n",
+    "numpy.random.seed(42)\n",
+    "\n",
+    "\n",
+    "### The words (features) and authors (labels), already largely processed.\n",
+    "### These files should have been created from the previous (Lesson 10)\n",
+    "### mini-project.\n",
+    "words_file = \"../text_learning/your_word_data.pkl\"\n",
+    "authors_file = \"../text_learning/your_email_authors.pkl\"\n",
+    "word_data = pickle.load( open(words_file, \"r\"))\n",
+    "authors = pickle.load( open(authors_file, \"r\") )\n",
+    "\n",
+    "\n",
+    "\n",
+    "### test_size is the percentage of events assigned to the test set (the\n",
+    "### remainder go into training)\n",
+    "### feature matrices changed to dense representations for compatibility with\n",
+    "### classifier functions in versions 0.15.2 and earlier\n",
+    "from sklearn import cross_validation\n",
+    "features_train, features_test, labels_train, labels_test = cross_validation.train_test_split(word_data, authors, test_size=0.1, random_state=42)\n",
+    "\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "vectorizer = TfidfVectorizer(sublinear_tf=True, max_df=0.5,\n",
+    "                             stop_words='english')\n",
+    "features_train = vectorizer.fit_transform(features_train)\n",
+    "features_test  = vectorizer.transform(features_test).toarray()\n",
+    "\n",
+    "\n",
+    "### a classic way to overfit is to use a small number\n",
+    "### of data points and a large number of features;\n",
+    "### train on only 150 events to put ourselves in this regime\n",
+    "features_train = features_train[:150]\n",
+    "labels_train   = labels_train[:150]\n",
+    "\n",
+    "\n",
+    "\n",
+    "### your code goes here\n",
+    "from sklearn import tree\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "clf = tree.DecisionTreeClassifier()\n",
+    "clf.fit(features_train, labels_train)\n",
+    "predict = clf.predict(features_test)\n",
+    "\n",
+    "print accuracy_score(predict, labels_test)\n"
    ]
   },
   {
