feat: Find the most powerful feature and index

--- a/Machine-Learning/Mini-Project.ipynb
+++ b/Machine-Learning/Mini-Project.ipynb
@@ -3191,6 +3191,76 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 145,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "feature_words = tfidf.get_feature_names()\n",
+    "feature_importances = clf.feature_importances_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "feature number 1: shirt (0.764705882353)\n",
+      "feature number 2: secreto (0.134028294862)\n",
+      "feature number 3: forwardene113000doc (0.0749500333111)\n",
+      "feature number 4: king (0.0263157894737)\n",
+      "feature number 5: basic (0.0)\n",
+      "feature number 6: bass (0.0)\n",
+      "feature number 7: basp (0.0)\n",
+      "feature number 8: basketbal (0.0)\n",
+      "feature number 9: basket (0.0)\n",
+      "feature number 10: basisthank (0.0)\n"
+     ]
+    }
+   ],
+   "source": [
+    "new_order = np.argsort(feature_importances)[::-1]\n",
+    "\n",
+    "for i in range(10):\n",
+    "    print \"feature number {}: {} ({})\".format(i+1, feature_words[new_order[i]], feature_importances[new_order[i]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "33614"
+      ]
+     },
+     "execution_count": 149,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "feature_words.index('shirt')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
