--- a/Machine-Learning/Mini-Project.ipynb
+++ b/Machine-Learning/Mini-Project.ipynb
@@ -2808,6 +2808,167 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Get rid of the other most significant word again, and re-run the code."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "emails processed\n"
+     ]
+    }
+   ],
+   "source": [
+    "# %load vectorize_text.py\n",
+    "#!/usr/bin/python\n",
+    "\n",
+    "import os\n",
+    "import pickle\n",
+    "import re\n",
+    "import sys\n",
+    "\n",
+    "sys.path.append( \"../tools/\" )\n",
+    "from parse_out_email_text import parseOutText\n",
+    "\n",
+    "\"\"\"\n",
+    "    Starter code to process the emails from Sara and Chris to extract\n",
+    "    the features and get the documents ready for classification.\n",
+    "\n",
+    "    The list of all the emails from Sara are in the from_sara list\n",
+    "    likewise for emails from Chris (from_chris)\n",
+    "\n",
+    "    The actual documents are in the Enron email dataset, which\n",
+    "    you downloaded/unpacked in Part 0 of the first mini-project. If you have\n",
+    "    not obtained the Enron email corpus, run startup.py in the tools folder.\n",
+    "\n",
+    "    The data is stored in lists and packed away in pickle files at the end.\n",
+    "\"\"\"\n",
+    "\n",
+    "from_sara  = open(\"from_sara.txt\", \"r\")\n",
+    "from_chris = open(\"from_chris.txt\", \"r\")\n",
+    "\n",
+    "from_data = []\n",
+    "word_data = []\n",
+    "\n",
+    "### temp_counter is a way to speed up the development--there are\n",
+    "### thousands of emails from Sara and Chris, so running over all of them\n",
+    "### can take a long time\n",
+    "### temp_counter helps you only look at the first 200 emails in the list so you\n",
+    "### can iterate your modifications quicker\n",
+    "\n",
+    "remove_list = [\"sara\", \"shackleton\", \"chris\", \"germani\", \"sshacklensf\", \"cgermannsf\"]\n",
+    "\n",
+    "for name, from_person in [(\"sara\", from_sara), (\"chris\", from_chris)]:\n",
+    "    for path in from_person:\n",
+    "        ### only look at first 200 emails when developing\n",
+    "        ### once everything is working, remove this line to run over full dataset\n",
+    "\n",
+    "\n",
+    "            path = os.path.join('..', path[:-1])\n",
+    "            email = open(path, \"r\")\n",
+    "            ### use parseOutText to extract the text from the opened email\n",
+    "            words = parseOutText(email)\n",
+    "            ### use str.replace() to remove any instances of the words\n",
+    "            ### [\"sara\", \"shackleton\", \"chris\", \"germani\"]\n",
+    "            for item in remove_list:\n",
+    "                words = words.replace(item, '')\n",
+    "\n",
+    "            ### append the text to word_data\n",
+    "            word_data.append(words)\n",
+    "            ### append a 0 to from_data if email is from Sara, and 1 if email is from Chris\n",
+    "            from_data.append(0 if name == 'sara' else 1)\n",
+    "\n",
+    "            email.close()\n",
+    "\n",
+    "print \"emails processed\"\n",
+    "from_sara.close()\n",
+    "from_chris.close()\n",
+    "\n",
+    "pickle.dump( word_data, open(\"your_word_data.pkl\", \"w\") )\n",
+    "pickle.dump( from_data, open(\"your_email_authors.pkl\", \"w\") )\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "### in Part 4, do TfIdf vectorization here\n",
+    "\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "\n",
+    "tfidf = TfidfVectorizer(stop_words='english')\n",
+    "new_word_data = tfidf.fit_transform(word_data)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.816837315131\n"
+     ]
+    }
+   ],
+   "source": [
+    "%run find_signature.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "feature number 1: houectect (0.363636363636)\n",
+      "feature number 2: fax (0.186927243449)\n",
+      "feature number 3: attach (0.105378579003)\n",
+      "feature number 4: isda (0.0840692099229)\n",
+      "feature number 5: pleas (0.0475805258904)\n",
+      "feature number 6: deal (0.0474074074074)\n",
+      "feature number 7: enron (0.0426666666667)\n",
+      "feature number 8: bond (0.0262801932367)\n",
+      "feature number 9: master (0.0255293305728)\n",
+      "feature number 10: leav (0.0248101945003)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "21323"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "feature_words = vectorizer.get_feature_names()\n",
+    "feature_importances = clf.feature_importances_\n",
+    "new_order = np.argsort(feature_importances)[::-1]\n",
+    "\n",
+    "for i in range(10):\n",
+    "    print \"feature number {}: {} ({})\".format(i+1, feature_words[new_order[i]], feature_importances[new_order[i]])\n",
+    "\n",
+    "feature_words.index(feature_words[new_order[0]])"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
