--- a/Machine-Learning/Mini-Project.ipynb
+++ b/Machine-Learning/Mini-Project.ipynb
@@ -3326,6 +3326,68 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.72413793103448276"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# %load validate_poi.py\n",
+    "#!/usr/bin/python\n",
+    "\n",
+    "\n",
+    "\"\"\"\n",
+    "    Starter code for the validation mini-project.\n",
+    "    The first step toward building your POI identifier!\n",
+    "\n",
+    "    Start by loading/formatting the data\n",
+    "\n",
+    "    After that, it's not our code anymore--it's yours!\n",
+    "\"\"\"\n",
+    "\n",
+    "import pickle\n",
+    "import sys\n",
+    "sys.path.append(\"../tools/\")\n",
+    "from feature_format import featureFormat, targetFeatureSplit\n",
+    "\n",
+    "data_dict = pickle.load(open(\"../final_project/final_project_dataset.pkl\", \"r\") )\n",
+    "\n",
+    "### first element is our labels, any added elements are predictor\n",
+    "### features. Keep this the same for the mini-project, but you'll\n",
+    "### have a different feature list when you do the final project.\n",
+    "features_list = [\"poi\", \"salary\"]\n",
+    "\n",
+    "data = featureFormat(data_dict, features_list)\n",
+    "labels, features = targetFeatureSplit(data)\n",
+    "\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "features_train, features_test, labels_train, labels_test = train_test_split(\n",
+    "    features, labels, test_size=0.3, random_state=42\n",
+    ")\n",
+    "\n",
+    "\n",
+    "### it's all yours from here forward!\n",
+    "from sklearn import tree\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "tree = tree.DecisionTreeClassifier()\n",
+    "tree.fit(features_train, labels_train)\n",
+    "predict = tree.predict(features_test)\n",
+    "accuracy_score(predict, labels_test)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
