feat: Run evaluate_poi_identifier.py

--- a/Machine-Learning/Mini-Project.ipynb
+++ b/Machine-Learning/Mini-Project.ipynb
@@ -3387,6 +3387,70 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Evaluation Metrics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.72413793103448276"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# %load evaluate_poi_identifier.py\n",
+    "#!/usr/bin/python\n",
+    "\n",
+    "\n",
+    "\"\"\"\n",
+    "    Starter code for the evaluation mini-project.\n",
+    "    Start by copying your trained/tested POI identifier from\n",
+    "    that which you built in the validation mini-project.\n",
+    "\n",
+    "    This is the second step toward building your POI identifier!\n",
+    "\n",
+    "    Start by loading/formatting the data...\n",
+    "\"\"\"\n",
+    "\n",
+    "import pickle\n",
+    "import sys\n",
+    "sys.path.append(\"../tools/\")\n",
+    "from feature_format import featureFormat, targetFeatureSplit\n",
+    "\n",
+    "data_dict = pickle.load(open(\"../final_project/final_project_dataset.pkl\", \"r\") )\n",
+    "\n",
+    "### add more features to features_list!\n",
+    "features_list = [\"poi\", \"salary\"]\n",
+    "\n",
+    "data = featureFormat(data_dict, features_list)\n",
+    "labels, features = targetFeatureSplit(data)\n",
+    "\n",
+    "\n",
+    "\n",
+    "### your code goes here\n",
+    "\n",
+    "from sklearn import tree\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "tree = tree.DecisionTreeClassifier()\n",
+    "tree.fit(features_train, labels_train)\n",
+    "predict = tree.predict(features_test)\n",
+    "accuracy_score(predict, labels_test)\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
